@@ -5,10 +5,10 @@ package edu.colorado.phet.fractions.intro.intro.view;
  * @author Sam Reid
  */
 public class ChosenRepresentation {
-    public static final ChosenRepresentation NONE = new ChosenRepresentation();
     public static final ChosenRepresentation HORIZONTAL_BAR = new ChosenRepresentation();
     public static final ChosenRepresentation VERTICAL_BAR = new ChosenRepresentation();
-    public static final ChosenRepresentation SQUARE = new ChosenRepresentation();
+    //    public static final ChosenRepresentation SQUARE = new ChosenRepresentation();
     public static final ChosenRepresentation PIE = new ChosenRepresentation();
     public static final ChosenRepresentation NUMBER_LINE = new ChosenRepresentation();
+    public static final ChosenRepresentation CAKE = new ChosenRepresentation();
 }
