@@ -7,9 +7,7 @@ import java.awt.Rectangle;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.RichSimpleObserver;
-import edu.colorado.phet.common.piccolophet.RichPNode;
 import edu.colorado.phet.common.piccolophet.nodes.PieChartNode;
-import edu.umd.cs.piccolo.PNode;
 
 /**
  * Shows a fraction as a set of pies.
@@ -56,20 +54,4 @@ public class PieSetFractionNode extends VisibilityNode {
         }.observe( numerator, denominator );
     }
 
-    //For layout of the pies, necessary because when sliced into different regions, the bounding boxes can extend beyond the pie.
-    //So instead we ignore the full bounds and just space based on diameter
-    private static class SpacedHBox extends RichPNode {
-        private final double spacing;
-        private double x = 0;
-
-        public SpacedHBox( double spacing ) {
-            this.spacing = spacing;
-        }
-
-        @Override public void addChild( PNode child ) {
-            child.setOffset( x, child.getYOffset() );
-            super.addChild( child );
-            x += spacing;
-        }
-    }
 }
