@@ -1,3 +1,5 @@
+Added cake representation to intro tab
+Temporarily increased denominator from 8 to 12 in intro tab for purposes of testing cake with given images
 Fixed "Reset all" on intro tab
 Centered representations vertically on Intro tab
 Removed the grid
